--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>carrinho</title>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<style>
 	.table{max-width: 750px;}
