alteração nas cores dos botões de salvar e cancelar

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			</div>
 			<span id="btnUpdate" style="display: none;">
 				<span id="inputIDUpdate"></span>
-				<button onclick="updateData();" class="btn btn-default">Salvar</button>
-				<button onclick="resetForm();" class="btn btn-default">Cancelar</button>
+				<button onclick="updateData();" class="btn btn-primary">Salvar</button>
+				<button onclick="resetForm();" class="btn btn-primary">Cancelar</button>
 			</span>
 			<span id="btnAdd">
 				<button onclick="addData();" class="btn btn-default">Adicionar</button>
